fix: adjust form height and alignment for improved layout in authentication page

--- a/src/app/modules/authentication/pages/authentication.page/authentication.page.component.scss
+++ b/src/app/modules/authentication/pages/authentication.page/authentication.page.component.scss
@@ -35,10 +35,11 @@
 			}
 			.content {
 				margin-top: 2em;
-				height: 50%;
+				height: 60%;
 				form {
 					display: flex;
 					flex-direction: column;
+					justify-content: space-between;
 					gap: 2em;
 				}
 			}
